fix: faq page spacing resolved

--- a/assets/output.css
+++ b/assets/output.css
@@ -365,6 +365,9 @@
   .mb-6 {
     margin-bottom: calc(var(--spacing) * 6);
   }
+  .mb-8 {
+    margin-bottom: calc(var(--spacing) * 8);
+  }
   .-ml-3 {
     margin-left: calc(var(--spacing) * -3);
   }
@@ -668,6 +671,9 @@
   .min-w-\[71\.35px\] {
     min-width: 71.35px;
   }
+  .flex-1 {
+    flex: 1;
+  }
   .flex-shrink {
     flex-shrink: 1;
   }
@@ -831,6 +837,9 @@
   .gap-16 {
     gap: calc(var(--spacing) * 16);
   }
+  .gap-20 {
+    gap: calc(var(--spacing) * 20);
+  }
   .gap-\[21\.4px\] {
     gap: 21.4px;
   }
@@ -891,6 +900,9 @@
   }
   .gap-x-6 {
     column-gap: calc(var(--spacing) * 6);
+  }
+  .gap-x-20 {
+    column-gap: calc(var(--spacing) * 20);
   }
   .space-x-1 {
     :where(& > :not(:last-child)) {
@@ -963,6 +975,9 @@
   }
   .gap-y-12 {
     row-gap: calc(var(--spacing) * 12);
+  }
+  .gap-y-20 {
+    row-gap: calc(var(--spacing) * 20);
   }
   .gap-y-\[43\.5px\] {
     row-gap: 43.5px;
@@ -1857,6 +1872,11 @@
       margin-top: calc(var(--spacing) * 6);
     }
   }
+  .md\:mb-0 {
+    @media (width >= 48rem) {
+      margin-bottom: calc(var(--spacing) * 0);
+    }
+  }
   .md\:-ml-4 {
     @media (width >= 48rem) {
       margin-left: calc(var(--spacing) * -4);
@@ -2534,6 +2554,11 @@
   .lg\:py-16 {
     @media (width >= 64rem) {
       padding-block: calc(var(--spacing) * 16);
+    }
+  }
+  .lg\:py-\[128px\] {
+    @media (width >= 64rem) {
+      padding-block: 128px;
     }
   }
   .lg\:pt-4 {
